[package]
name = "zoraxy-blocklist-import-plugin"
version = "0.1.0"
edition = "2024"
authors = [
    "Anthony Rubick <68485672+AnthonyMichaelTDM@users.noreply.github.com>",
]
readme = "README.md"
license = "MIT"


[dependencies]
anyhow = "1.0.100"
axum = "0.8.7"
html-escape = "0.2.13"
include_dir = "0.7.4"
reqwest = { version = "0.12.26", features = ["charset", "json", "system-proxy"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.44"
zoraxy-rs = "0.1.0"
